force-app/main/default/objects/QuoteLineItem/fields/ABA_Raw_Net__c.field-meta.xml
<CustomField>
    <fullName>ABA_Raw_Net__c</fullName>
    <description>SC-3384: raw per-unit USD net stamped by the Attribute-Based Adjustment (ABA) step in the pricing procedure, captured BEFORE multi-currency localization. Non-null marks a line whose net was set by the currency-blind ABA Override decision table (0lDa50000007BEuEAM). The currency-correction pass in PartnerNetPricePosthook reads this to (1) know the line is ABA-priced without value-guessing, (2) localize per-unit = raw x static conversion rate, and (3) stay idempotent (skip when NetUnitPrice already equals raw x rate). Stamped only when the ABA lookup actually matches.</description>
    <inlineHelpText>Raw per-unit USD net from the attribute-based adjustment, before currency localization. System field.</inlineHelpText>
    <label>ABA Raw Net (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>