force-app/main/default/objects/QuoteLineItem/fields/ALE__c.field-meta.xml
<CustomField>
    <fullName>ALE__c</fullName>
    <description>Annual License Equivalent calculation. Impacts revenue recognition.</description>
    <formula>(UnitPrice * Quantity) - Displaced_ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Line ALE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>