force-app/main/default/objects/QuoteLineItem/fields/ALE_Base__c.field-meta.xml
<CustomField>
    <fullName>ALE_Base__c</fullName>
    <description>Value of the Quote Line ALE in base currency.</description>
    <formula>IF(ISBLANK(ALE__c), 0, ALE__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Line ALE (Base)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>