force-app/main/default/objects/QuoteLineItem/fields/Allow_Regional_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Allow_Regional_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this item is eligible for Fortra regional pricing.  Results in the Pricing Procedure calculating the regional pricing.</description>
    <label>Allow Regional Pricing</label>
    <type>Checkbox</type>
</CustomField>