force-app/main/default/objects/QuoteLineItem/fields/ARR_Hidden__c.field-meta.xml
<CustomField>
    <fullName>ARR_Hidden__c</fullName>
    <description>Holds the value of Quote Line ARR that can be rolled-up to Quote.</description>
    <label>ARR Hidden</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>