force-app/main/default/objects/QuoteLineItem/fields/Attribute_Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Picklist_Value__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attribute Picklist Value</label>
    <referenceTo>AttributePicklistValue</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>