force-app/main/default/objects/QuoteLineItem/fields/Attribute_Price_Mode__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Price_Mode__c</fullName>
    <description>Indicates which mode to use when a line is subject to Attribute - Volume based pricing.</description>
    <label>Attribute Price Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unit Price</fullName>
            </value>
            <value>
                <fullName>Total Price</fullName>
            </value>
            <value>
                <fullName>Calculated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>