force-app/main/default/objects/QuoteLineItem/fields/AttributeMultiplierPct__c.field-meta.xml
<CustomField>
    <fullName>AttributeMultiplierPct__c</fullName>
    <label>Attribute Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>