force-app/main/default/objects/QuoteLineItem/fields/Base_Price__c.field-meta.xml
<CustomField>
    <fullName>Base_Price__c</fullName>
    <description>Base Price is calculated on the basis of Price Adjustment Schedule</description>
    <label>Base Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>