force-app/main/default/objects/QuoteLineItem/fields/c_CreatedfromEstimate__c.field-meta.xml
<CustomField>
    <fullName>c_CreatedfromEstimate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created from Estimate</label>
    <type>Checkbox</type>
</CustomField>