force-app/main/default/objects/QuoteLineItem/fields/Clone_Parent_LineItemId__c.field-meta.xml
<CustomField>
    <fullName>Clone_Parent_LineItemId__c</fullName>
    <description>Temporary field to store parent quote line item ID during cloning process, used to attempt updating the standard ParentQuoteLineItemId field after creation.</description>
    <label>Clone Parent LineItem ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>