force-app/main/default/objects/QuoteLineItem/fields/COLA_Applied_Date__c.field-meta.xml
<CustomField>
    <fullName>COLA_Applied_Date__c</fullName>
    <description>Timestamp when COLA was first applied to this quote line</description>
    <inlineHelpText>When the COLA percentage was initially applied to this quote line.</inlineHelpText>
    <label>COLA Applied Date</label>
    <type>DateTime</type>
</CustomField>