force-app/main/default/objects/QuoteLineItem/fields/COLA_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>COLA_Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who last modified the COLA percentage</description>
    <inlineHelpText>The user who last changed the COLA Uplift Percent field.</inlineHelpText>
    <label>COLA Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Quote Line Items (COLA Modified)</relationshipLabel>
    <relationshipName>QuoteLineItems_COLA_Modified</relationshipName>
    <type>Lookup</type>
</CustomField>