force-app/main/default/objects/QuoteLineItem/fields/COLA_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>COLA_Modified_Date__c</fullName>
    <description>Timestamp when COLA percentage was last modified</description>
    <inlineHelpText>When the COLA Uplift Percent was last changed.</inlineHelpText>
    <label>COLA Modified Date</label>
    <type>DateTime</type>
</CustomField>