force-app/main/default/objects/QuoteLineItem/fields/COLA_Outyear_Uplift_Percent__c.field-meta.xml
<CustomField>
    <fullName>COLA_Outyear_Uplift_Percent__c</fullName>
    <description>The COLA uplift percentage applied to out-years (years 2+) on multi-year deals. Defaults to MyCAP_Rules__mdt Global value when COLA Source is MyCAP Default. Editable for negotiated out-year rates.</description>
    <inlineHelpText>The COLA percentage applied to out-years (years 2+). Defaults to the MyCAP rate but can be overridden for negotiated deals.</inlineHelpText>
    <label>COLA Outyear Uplift Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>