force-app/main/default/objects/QuoteLineItem/fields/COLA_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>COLA_Override_Reason__c</fullName>
    <description>Justification for overriding the default COLA percentage</description>
    <inlineHelpText>Enter the business justification when overriding the default COLA rate.</inlineHelpText>
    <label>COLA Override Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>