force-app/main/default/objects/QuoteLineItem/fields/COLA_Solution_Category__c.field-meta.xml
<CustomField>
    <fullName>COLA_Solution_Category__c</fullName>
    <description>The Solution Category used to lookup the COLA percentage</description>
    <inlineHelpText>The Solution Category from the Product Catalog used to determine the COLA rate.</inlineHelpText>
    <label>COLA Solution Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>