force-app/main/default/objects/QuoteLineItem/fields/COLA_Source__c.field-meta.xml
<CustomField>
    <fullName>COLA_Source__c</fullName>
    <description>Indicates the source of the COLA percentage applied to this quote line. Tracks whether the value came from the default CMDT lookup, a Contract-level override, or a manual line-level override.</description>
    <inlineHelpText>Shows where the COLA percentage came from: CMDT Lookup (default), Contract Override, or Line Override (manual).</inlineHelpText>
    <label>COLA Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CMDT Lookup</fullName>
                <default>true</default>
                <label>CMDT Lookup</label>
            </value>
            <value>
                <fullName>Contract Override</fullName>
            </value>
            <value>
                <fullName>Line Override</fullName>
            </value>
            <value>
                <fullName>MyCAP Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>