force-app/main/default/objects/QuoteLineItem/fields/COLA_Uplift2__c.field-meta.xml
<CustomField>
    <fullName>COLA_Uplift2__c</fullName>
    <label>COLA Uplift %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>