force-app/main/default/objects/QuoteLineItem/fields/COLA_Uplift_Percent__c.field-meta.xml
<CustomField>
    <fullName>COLA_Uplift_Percent__c</fullName>
    <description>Applied COLA percentage - editable by sales representatives for override</description>
    <inlineHelpText>The COLA percentage applied to this renewal quote line. Edit to override the default rate.</inlineHelpText>
    <label>COLA Uplift Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>