force-app/main/default/objects/QuoteLineItem/fields/COLACalculatedPrice__c.field-meta.xml
<CustomField>
    <fullName>COLACalculatedPrice__c</fullName>
    <label>COLACalculatedPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>