force-app/main/default/objects/QuoteLineItem/fields/COLAUpliftPercent__c.field-meta.xml
<CustomField>
    <fullName>COLAUpliftPercent__c</fullName>
    <label>COLA Uplift Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>