force-app/main/default/objects/QuoteLineItem/fields/CustomProductName__c.field-meta.xml
<CustomField>
    <fullName>CustomProductName__c</fullName>
    <label>Custom Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>