force-app/main/default/objects/QuoteLineItem/fields/Default_COLA_Uplift_Percent__c.field-meta.xml
<CustomField>
    <fullName>Default_COLA_Uplift_Percent__c</fullName>
    <description>Original COLA percentage from COLA_Uplift_Rules__mdt - preserved for comparison</description>
    <inlineHelpText>The original COLA rate from the COLA Uplift Rules. Used to detect overrides.</inlineHelpText>
    <label>Default COLA Uplift Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>