force-app/main/default/objects/QuoteLineItem/fields/Discount_Reason__c.field-meta.xml
<CustomField>
    <fullName>Discount_Reason__c</fullName>
    <description>Picklist to indicate why a discount was given.</description>
    <label>Discount Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competitive Pricing</fullName>
            </value>
            <value>
                <fullName>Volume Discount</fullName>
            </value>
            <value>
                <fullName>Strategic Account</fullName>
            </value>
            <value>
                <fullName>Renewal Incentive</fullName>
            </value>
            <value>
                <fullName>Multi-Year Agreement</fullName>
            </value>
            <value>
                <fullName>Partner Discount</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>