force-app/main/default/objects/QuoteLineItem/fields/Discount_Value__c.field-meta.xml
<CustomField>
    <fullName>Discount_Value__c</fullName>
    <formula>If(NOT(ISBLANK(DiscountAmount)), DiscountAmount / UnitPrice,
If(NOT(ISBLANK(Discount)), Discount,
0))</formula>
    <label>Discount Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>