force-app/main/default/objects/QuoteLineItem/fields/Displaced_ARR__c.field-meta.xml
<CustomField>
    <fullName>Displaced_ARR__c</fullName>
    <description>Calculates displaced ARR when existing products are replaced with this new product. If existing products will be replaced with this new product, it indicates the value of the displaced ARR.</description>
    <formula>IF(Swap__c = TRUE, Displaced_ARR_Input__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Displaced ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>