force-app/main/default/objects/QuoteLineItem/fields/Displaced_ARR_Base__c.field-meta.xml
<CustomField>
    <fullName>Displaced_ARR_Base__c</fullName>
    <description>Value of the Displaced ARR in base currency.</description>
    <formula>IF(ISBLANK(Displaced_ARR__c), 0, Displaced_ARR__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Displaced ARR (Base)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>