force-app/main/default/objects/QuoteLineItem/fields/Displaced_ARR_Input__c.field-meta.xml
<CustomField>
    <fullName>Displaced_ARR_Input__c</fullName>
    <description>Input field for Displaced ARR when swapping products. Used in formula calculations.</description>
    <label>Displaced ARR Input</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>