force-app/main/default/objects/QuoteLineItem/fields/Exchange_Rate_To_USD__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate_To_USD__c</fullName>
    <description>Currency exchange rate from the Quote Line Item&apos;s transaction currency to USD, captured at pricing time. Looked up from DatedConversionRate (Advanced Currency Management) with CurrencyType fallback. Refreshed on every reprice. Mapped to OrderItem via Context Definition during Quote-to-Order conversion.</description>
    <label>Exchange Rate To USD</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>