force-app/main/default/objects/QuoteLineItem/fields/Export_Control_Category__c.field-meta.xml
<CustomField>
    <fullName>Export_Control_Category__c</fullName>
    <description>Indicates which Export Control category this product belongs to used to determine what license may apply.</description>
    <label>Export Control Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EAR99</fullName>
            </value>
            <value>
                <fullName>5D002</fullName>
            </value>
            <value>
                <fullName>5D992</fullName>
            </value>
            <value>
                <fullName>NLR (No License Required)</fullName>
            </value>
            <value>
                <fullName>License Exception</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>