force-app/main/default/objects/QuoteLineItem/fields/Export_Control_Document__c.field-meta.xml
<CustomField>
    <fullName>Export_Control_Document__c</fullName>
    <description>Document that authorizes export of this product to the customer. Reference to export authorization document.</description>
    <label>Export Control Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>