force-app/main/default/objects/QuoteLineItem/fields/Export_Documentation_Required__c.field-meta.xml
<CustomField>
    <fullName>Export_Documentation_Required__c</fullName>
    <description>Indicates what type of export control documentation (if any) is required for controlled products.</description>
    <label>Export Documentation Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None Required</fullName>
                <default>true</default>
                <label>None Required</label>
            </value>
            <value>
                <fullName>Export License</fullName>
            </value>
            <value>
                <fullName>License Exception TSU</fullName>
            </value>
            <value>
                <fullName>End User Statement</fullName>
            </value>
            <value>
                <fullName>Import Certificate</fullName>
            </value>
            <value>
                <fullName>Other Documentation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>