force-app/main/default/objects/QuoteLineItem/fields/Final_Year_COLA_Calculated_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Year_COLA_Calculated_Price__c</fullName>
    <description>Compounded COLA price for the final year of a multi-year deal. Derives the annual COLA rate from COLACalculatedPrice__c / Pre_COLA_Price__c and compounds across PricingTermCount years. For single-year deals, equals COLACalculatedPrice__c.</description>
    <formula>IF(
  AND(
PricingTermCount &gt; 1,
COLACalculatedPrice__c &gt; 0,
COLA_Outyear_Uplift_Percent__c &gt; 0
  ),
  ROUND(
COLACalculatedPrice__c * EXP(
  LN(1 + COLA_Outyear_Uplift_Percent__c / 100)
  * (PricingTermCount - 1)
),
2
  ),
  IF(
AND(
  PricingTermCount &gt; 1,
  COLA_Uplift_Percent__c &gt; 0,
  Pre_COLA_Price__c &gt; 0
),
ROUND(
  Pre_COLA_Price__c * EXP(LN(1 + COLA_Uplift_Percent__c / 100) * PricingTermCount),
  2
),
COLACalculatedPrice__c
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The compounded COLA-adjusted price for the final year of a multi-year subscription. For single-year deals, this equals the COLA Calculated Price.</inlineHelpText>
    <label>Final Year COLA Calculated Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>