force-app/main/default/objects/QuoteLineItem/fields/Fortra_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Fortra_Product_Type__c</fullName>
    <description>The Fortra product type for this line item. Used to determine which margin percentage to apply from the Partner Pricing Model.</description>
    <inlineHelpText>Product type determines which partner margin rate applies.</inlineHelpText>
    <label>Fortra Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Perpetual</fullName>
            </value>
            <value>
                <fullName>New Maintenance</fullName>
            </value>
            <value>
                <fullName>Renewal Maintenance</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>SaaS Subscription</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Professional Service</fullName>
            </value>
            <value>
                <fullName>Renewal Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>