force-app/main/default/objects/QuoteLineItem/fields/GSA__c.field-meta.xml
<CustomField>
    <fullName>GSA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the line item has GSA pricing. Could be an Attribute or replaced by Pricebook for reporting.</description>
    <label>GSA</label>
    <type>Checkbox</type>
</CustomField>