force-app/main/default/objects/QuoteLineItem/fields/Hardware__c.field-meta.xml
<CustomField>
    <fullName>Hardware__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates where the customer is running the software (MAC address or serial #). Need if adding modules to an existing hardware asset. Lookup to hardware record.</description>
    <label>Hardware</label>
    <referenceTo>Hardware__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>