force-app/main/default/objects/QuoteLineItem/fields/Hardware_Attributes_Synced__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Attributes_Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating whether hardware attribute defaults have been synced to this quote line item from the linked Hardware__c record.</description>
    <label>Hardware Attributes Synced</label>
    <type>Checkbox</type>
</CustomField>