force-app/main/default/objects/QuoteLineItem/fields/Hardware_ID__c.field-meta.xml
<CustomField>
    <fullName>Hardware_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Just the MAC address. Text.</description>
    <label>Hardware ID</label>
    <referenceTo>Hardware__c</referenceTo>
    <relationshipLabel>Quote Line Items (Hardware ID)</relationshipLabel>
    <relationshipName>Quote_Line_Items_Hardware_ID</relationshipName>
    <type>Lookup</type>
</CustomField>