force-app/main/default/objects/QuoteLineItem/fields/Hardware_Notes__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Notes__c</fullName>
    <description>Notes for the Order team regarding hardware requirements</description>
    <label>Hardware Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>