force-app/main/default/objects/QuoteLineItem/fields/Hardware_Price_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Price_Multiplier__c</fullName>
    <description>The combined multiplier applied from pGroup, user tier, and system type</description>
    <inlineHelpText>Combined multiplier from all hardware pricing factors</inlineHelpText>
    <label>Hardware Price Multiplier</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>