force-app/main/default/objects/QuoteLineItem/fields/Hardware_Pricing_Applied__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Pricing_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether hardware attribute-based pricing was applied to this line item</description>
    <inlineHelpText>Checked if hardware pricing factors were applied</inlineHelpText>
    <label>Hardware Pricing Applied</label>
    <type>Checkbox</type>
</CustomField>