force-app/main/default/objects/QuoteLineItem/fields/Hardware_Pricing_Detail__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Pricing_Detail__c</fullName>
    <description>JSON detail of hardware pricing calculation for audit trail</description>
    <inlineHelpText>Complete breakdown of hardware pricing calculation in JSON format</inlineHelpText>
    <label>Hardware Pricing Detail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>