force-app/main/default/objects/QuoteLineItem/fields/Hardware_Pricing_Source__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Pricing_Source__c</fullName>
    <description>Identifies the source of the hardware pricing adjustment</description>
    <inlineHelpText>Shows which hardware pricing factor was the primary source</inlineHelpText>
    <label>Hardware Pricing Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User Override</fullName>
            </value>
            <value>
                <fullName>Hardware Default</fullName>
            </value>
            <value>
                <fullName>System Default</fullName>
            </value>
            <value>
                <fullName>Combined</fullName>
                <default>true</default>
                <label>Combined</label>
            </value>
            <value>
                <fullName>SystemType</fullName>
                <isActive>false</isActive>
                <label>SystemType</label>
            </value>
            <value>
                <fullName>UserTier</fullName>
                <isActive>false</isActive>
                <label>UserTier</label>
            </value>
            <value>
                <fullName>pGroup</fullName>
                <isActive>false</isActive>
                <label>pGroup</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>