force-app/main/default/objects/QuoteLineItem/fields/Hardware_Reference__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the hardware record associated with this quote line</description>
    <label>Hardware Reference</label>
    <referenceTo>Hardware__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>