force-app/main/default/objects/QuoteLineItem/fields/Hardware_Type__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Dropdown. Options are System or Server. Equivalent to an attribute.</description>
    <label>Hardware Type</label>
    <referenceTo>Hardware__c</referenceTo>
    <relationshipLabel>Quote Line Items (Hardware Type)</relationshipLabel>
    <relationshipName>Quote_Line_Items_Hardware_Type</relationshipName>
    <type>Lookup</type>
</CustomField>