force-app/main/default/objects/QuoteLineItem/fields/HardwareCalculatedPrice_c__c.field-meta.xml
<CustomField>
    <fullName>HardwareCalculatedPrice_c__c</fullName>
    <label>Hardware Calculated Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>