force-app/main/default/objects/QuoteLineItem/fields/Has_Attribute_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Has_Attribute_Adjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this product has price adjustments made based upon product attributes.  Referenced by price procedures and price hooks.</description>
    <label>Has Attribute Adjustment</label>
    <type>Checkbox</type>
</CustomField>