force-app/main/default/objects/QuoteLineItem/fields/Hostname__c.field-meta.xml
<CustomField>
    <fullName>Hostname__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>5 digit number on Go Anywhere hardware record. Shows up on renewals if captured on hardware records.</description>
    <label>Hostname</label>
    <referenceTo>Hardware__c</referenceTo>
    <relationshipLabel>Quote Line Items (Hostname)</relationshipLabel>
    <relationshipName>Quote_Line_Items_Hostname</relationshipName>
    <type>Lookup</type>
</CustomField>