force-app/main/default/objects/QuoteLineItem/fields/Instances__c.field-meta.xml
<CustomField>
    <fullName>Instances__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Number of instances. Attribute.</description>
    <label>Instances</label>
    <referenceTo>Hardware__c</referenceTo>
    <relationshipLabel>Quote Line Items (Instances)</relationshipLabel>
    <relationshipName>Quote_Line_Items_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>