force-app/main/default/objects/QuoteLineItem/fields/Is_COLA_Overridden__c.field-meta.xml
<CustomField>
    <fullName>Is_COLA_Overridden__c</fullName>
    <description>Derived (SDD Pricing-COLA 6.2): TRUE when COLA_Uplift_Percent__c differs from the stamped Default_COLA_Uplift_Percent__c. Formula field replacing the prior trigger-maintained checkbox, so the override classification is computed from a single definition. Guarded so a line with no stamped default (or no percent) is not treated as an override.</description>
    <formula>NOT(ISBLANK(Default_COLA_Uplift_Percent__c)) &amp;&amp; NOT(ISBLANK(COLA_Uplift_Percent__c)) &amp;&amp; COLA_Uplift_Percent__c &lt;&gt; Default_COLA_Uplift_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates whether the COLA percentage differs from the default (derived).</inlineHelpText>
    <label>Is COLA Overridden</label>
    <type>Checkbox</type>
</CustomField>