force-app/main/default/objects/QuoteLineItem/fields/Is_Partner_Price_Overridden__c.field-meta.xml
<CustomField>
    <fullName>Is_Partner_Price_Overridden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the partner pricing has been manually overridden.</description>
    <inlineHelpText>Check if the partner price was manually adjusted.</inlineHelpText>
    <label>Is Partner Price Overridden</label>
    <type>Checkbox</type>
</CustomField>