force-app/main/default/objects/QuoteLineItem/fields/IsProductOfInterest__c.field-meta.xml
<CustomField>
    <fullName>IsProductOfInterest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies the primary product that attracted customer interest</description>
    <inlineHelpText>Check this box to identify this line item as the primary product that attracted the customer&apos;s interest. Only one line per Quote can be marked as Product of Interest.</inlineHelpText>
    <label>Product of Interest</label>
    <type>Checkbox</type>
</CustomField>