force-app/main/default/objects/QuoteLineItem/fields/Legacy_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Product_Name__c</fullName>
    <description>Legacy Product Name field is been used in reference to Data Migration mapping</description>
    <label>Legacy Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>