force-app/main/default/objects/QuoteLineItem/fields/Legacy_Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Product_Number__c</fullName>
    <description>Legacy Product Number is used for Data Migration data mapping.</description>
    <label>Legacy Product Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>