force-app/main/default/objects/QuoteLineItem/fields/LPAR_Number__c.field-meta.xml
<CustomField>
    <fullName>LPAR_Number__c</fullName>
    <description>Needed for issuing license keys.</description>
    <label>LPAR Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>