force-app/main/default/objects/QuoteLineItem/fields/LPAR_System_Name__c.field-meta.xml
<CustomField>
    <fullName>LPAR_System_Name__c</fullName>
    <description>Needed for issuing license keys.</description>
    <label>LPAR System Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>