force-app/main/default/objects/QuoteLineItem/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Needed for issuing license keys. Also an attribute driving price for Power products.</description>
    <label>Model</label>
    <referenceTo>Hardware__c</referenceTo>
    <relationshipLabel>Quote Line Items (Model)</relationshipLabel>
    <relationshipName>Quote_Line_Items_Model</relationshipName>
    <type>Lookup</type>
</CustomField>