force-app/main/default/objects/QuoteLineItem/fields/Multiplier2__c.field-meta.xml
<CustomField>
    <fullName>Multiplier2__c</fullName>
    <label>Multiplier2</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>