force-app/main/default/objects/QuoteLineItem/fields/Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Multiplier__c</fullName>
    <label>Multiplier</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>