force-app/main/default/objects/QuoteLineItem/fields/Partition_Reference__c.field-meta.xml
<CustomField>
    <fullName>Partition_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Partition__c object for hardware partition information</description>
    <label>Partition</label>
    <referenceTo>Partition__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>