force-app/main/default/objects/QuoteLineItem/fields/Partner_Adjusted_Price__c.field-meta.xml
<CustomField>
    <fullName>Partner_Adjusted_Price__c</fullName>
    <description>The calculated unit price after partner pricing adjustments have been applied.</description>
    <inlineHelpText>Final price after partner margin/discount has been applied.</inlineHelpText>
    <label>Partner Adjusted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>