force-app/main/default/objects/QuoteLineItem/fields/Partner_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Partner_Discount_Percent__c</fullName>
    <description>The total margin or discount percentage applied by partner pricing. For Guaranteed Margin, this is the sum of all partner margins.</description>
    <inlineHelpText>Total partner margin/discount percentage applied to this line.</inlineHelpText>
    <label>Partner Discount Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>